# dtrx

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
dtrx/: dtrx.py
tests/: compare.py
tools/: gen-manpage.sh  test-windows-install-fails.sh
